# AutoVcpkgCmake

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
cmake/vcpkg/: AutoVcpkg.cmake  Include.cmake
src/: CMakeLists.txt  main.cpp
